--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,15 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        //Nome da engine que vamos usar
         buildConfigField "String", "FLUTTER_ENGINE", '"diefferson.androidapp.FlutterEngine"'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        //arquiteturas suportadas pelo flutter
+        ndk {
+            // Filter for architectures supported by Flutter.
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86_64'
+        }
     }
 
     buildTypes {
@@ -27,21 +34,32 @@ android {
     productFlavors {
         dev {
             dimension "environment"
+            //método main do Flutter para o flavor Dev
             resValue "string", "flutter_entry", "mainDev"
         }
         sandbox {
             dimension "environment"
+            //método main do Flutter para o flavor Sandbox
             resValue "string", "flutter_entry", "mainSandbox"
         }
         prod {
             dimension "environment"
+            //método main do Flutter para o flavor Prod
             resValue "string", "flutter_entry", "mainProd"
         }
+    }
+
+    //O Flutter precisa da compatilidade com Java 8
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
+
+    //Implementation do modulo flutter
     implementation project(':flutter')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
