--- a/flutter_module/pubspec.yaml
+++ b/flutter_module/pubspec.yaml
@@ -9,7 +9,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_app:
-    path: ../../flutter_app
+    path: ../../flutterApp #to develop
+    #git: https://github.com/diefferson/flutterApp.git  #to releases
 
 dev_dependencies:
   flutter_test:
