--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,5 @@
 include ':app'
 rootProject.name = "AndroidApp"
-setBinding(new Binding([gradle: this]))                                // new
-evaluate(new File(                                                     // new
-        settingsDir,                                              // new
-        'flutter_module/.android/include_flutter.groovy'                         // new
-))
+setBinding(new Binding([gradle: this]))
+evaluate(new File( settingsDir,'flutter_module/.android/include_flutter.groovy'))
 include ':flutter_module'
